Aggiornato comando inserimento certificato su CouchDB